fixed visual error: button overflow in css

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .container {
     margin: 0 auto;
     max-width: 540px;
+    min-width: min-content;
 }
 .panel {
     background-color: #088395;
@@ -92,9 +93,9 @@ select:focus {
 }
 .player-insert {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px
+    gap: 10px;
 }
 .grid-container {
     display: grid;
